# ICT2215_Mobile_Security

./: README.md
SITDoctors/app/: CMakeLists.txt  build.gradle  google-services.json  proguard-rules.pro
SITDoctors/app/src/main/: AndroidManifest.xml
SITDoctors/app/src/main/cpp/: native-lib.c
SITDoctors/app/src/main/java/com/example/sitdoctors/: Login.java  (+15 more)
SITDoctors/app/src/main/res/drawable/: ic_attach_files.xml  ic_calendar.xml  ic_contacts_black_24dp.xml  message_background.xml  rounded_button.xml
SITDoctors/app/src/main/res/layout/: activity_camera.xml  activity_chat.xml  activity_doctor_chat.xml  activity_doctor_main.xml  activity_doctor_manage_appointments.xml  activity_doctor_profile.xml  activity_emergency_call.xml  activity_login.xml  activity_main.xml  activity_manage_appointments.xml  activity_message.xml  activity_nearby_clinics.xml  activity_patient_main.xml  activity_register.xml  activity_scan.xml  appointment_overview.xml  fragment_appointments.xml  fragment_chatbot.xml  fragment_contacts.xml  fragment_dashboard.xml  fragment_doctor_contact.xml  fragment_home.xml  fragment_profile.xml  item_appointment.xml  item_bot_message.xml  item_contact.xml  item_doctor.xml  item_doctor_appointment.xml  item_message_received.xml  item_patient_message.xml  item_user_message.xml  patient_activity_chat.xml
SITDoctors/app/src/main/res/menu/: bottom_nav_menu.xml
SITDoctors/app/src/main/res/navigation/: mobile_navigation.xml
SITDoctors/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
SITDoctors/app/src/main/res/values-night/: themes.xml
(+41 files in other folders)
